# feedback-control-systems

./: 0_template.ipynb  1_mass_spring_damper-PD_controller.ipynb  2_mass_spring_damper-PID_controller.ipynb  3_mass_spring_damper-PID_controller_import_pkg.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
feedback_control_systems/: __init__.py  main.py
figs/: models.drawio
