[tool.poetry]
name = "feedback-control-systems"
version = "0.1.0"
description = "Feedback control systems simulation templates on ipynb"
authors = ["Shunsuke Kimura <kimushun1101@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.9"
numpy = "^1.26.2"
scipy = "^1.11.4"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
